--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/react-dom": "^17.0.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint-config-prettier": "^8.5.0",
