Feat: Search Page완성 및 redux tookit 적용 (#9)
* Feat: Search Page 추가

* Feat: SideBar Component 생성

* Feat: Redux toolkit search

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,9 @@
   },
   "rules": {
     "semi": 2,
-    "@typescript-eslint/explicit-function-return-type": [
-      "warn",
-      { "allowTypedFunctionExpressions": true }
-    ]
+    "react-hooks/exhaustive-deps": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-explicit-any": 0
   },
   "settings": {
     "react": {
