--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
-    "styled-reset": "^4.3.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
